--- a/index.html
+++ b/index.html
@@ -10,11 +10,29 @@
 </head>
 <body>
     <main>
-        <div class="board"></div>
-        <div class="btns">
-            <button class="matchHistoryBtn" id="prevbtn">&lt;&lt; Prev</button>
-            <button class="matchHistoryBtn" id="nxtbtn">Next &gt;&gt;</button>
-        </div>
+        <section id="gamescreen">
+            <div class="playerboard" id="player1">
+                <div class="scoreboard" id="player1score"></div>
+                <div class="playerbox"></div>
+            </div>
+            <div class="board"></div>
+            <div class="playerboard" id="player2">
+                <div class="scoreboard" id="player2score"></div>
+                <div class="playerbox"></div>
+            </div>
+        </section>
+
+        <section id="startmenu">
+            <button id="startbtn">Start</button>
+        </section>
+        
+        <section id="endgamemenu">
+            <div class="endbtns">
+                <button class="matchHistoryBtn" id="prevbtn">&lt;&lt; Prev</button>
+                <button class="matchHistoryBtn" id="restartbtn">Restart</button>
+                <button class="matchHistoryBtn" id="nxtbtn">Next &gt;&gt;</button>
+            </div>
+        </section>
     </main>
 </body>
 </html>
