Feat: add rematch

--- a/index.html
+++ b/index.html
@@ -32,11 +32,20 @@
             </div>
         </section>
         
-        <section id="endgamemenu">
+        <section id="reviewmenu">
             <div class="endbtns">
                 <button class="matchHistoryBtn" id="prevbtn">&lt;&lt; Prev</button>
                 <button class="matchHistoryBtn" id="restartbtn">Restart</button>
                 <button class="matchHistoryBtn" id="nxtbtn">Next &gt;&gt;</button>
+            </div>
+        </section>
+
+        <section id="winmessage">
+            <div class="messagebox">
+                <p><span id="messagestatus">Congrats You Win!!</span></p>
+                <button class="matchHistoryBtn" id="rematchbtn">Rematch</button>
+                <button class="matchHistoryBtn">Review</button>
+                <button class="matchHistoryBtn" id="quitbtn">Quit</button>
             </div>
         </section>
     </main>
