Feat: add review for tictactoe moves

--- a/index.html
+++ b/index.html
@@ -30,13 +30,15 @@
                 </div>
                 <div class="playerbox"></div>
             </div>
-        </section>
-        
-        <section id="reviewmenu">
-            <div class="endbtns">
-                <button class="matchHistoryBtn" id="prevbtn">&lt;&lt; Prev</button>
-                <button class="matchHistoryBtn" id="restartbtn">Restart</button>
-                <button class="matchHistoryBtn" id="nxtbtn">Next &gt;&gt;</button>
+            <div class="endgamebtns">
+                <div class="reviewleft">
+                    <button class="matchHistoryBtn" id="prevbtn">&lt;&lt; Prev</button>
+                    <button class="matchHistoryBtn" id="restartbtn">Quit</button>
+                </div>
+                <div class="reviewright">
+                    <button class="matchHistoryBtn" id="nxtbtn">Next &gt;&gt;</button>
+                    <button class="matchHistoryBtn" id="rematch2btn">Rematch</button>
+                </div>
             </div>
         </section>
 
@@ -44,7 +46,7 @@
             <div class="messagebox">
                 <p><span id="messagestatus">Congrats You Win!!</span></p>
                 <button class="matchHistoryBtn" id="rematchbtn">Rematch</button>
-                <button class="matchHistoryBtn">Review</button>
+                <button class="matchHistoryBtn" id="reviewbtn">Review</button>
                 <button class="matchHistoryBtn" id="quitbtn">Quit</button>
             </div>
         </section>
