fix: adjusting size of the elements

--- a/index.html
+++ b/index.html
@@ -40,14 +40,13 @@
                     <button class="matchHistoryBtn" id="rematch2btn">Rematch</button>
                 </div>
             </div>
-        </section>
-
-        <section id="winmessage">
-            <div class="messagebox">
-                <p><span id="messagestatus">Congrats You Win!!</span></p>
-                <button class="matchHistoryBtn" id="rematchbtn">Rematch</button>
-                <button class="matchHistoryBtn" id="reviewbtn">Review</button>
-                <button class="matchHistoryBtn" id="quitbtn">Quit</button>
+            <div class="winmessage">
+                <div class="messagebox">
+                    <p><span id="messagestatus">Congrats You Win!!</span></p>
+                    <button class="matchHistoryBtn" id="rematchbtn">Rematch</button>
+                    <button class="matchHistoryBtn" id="reviewbtn">Review</button>
+                    <button class="matchHistoryBtn" id="quitbtn">Quit</button>
+                </div>
             </div>
         </section>
     </main>
