added starting screen

--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
 <body>
     <main>
         <section id="startmenu">
-            <button id="startbtn">Start</button>
+            <div class="startbox">
+                <p><span id="start-title">Tic Tac Toe?</span></p>
+                <button id="startbtn">Start</button>
+            </div>
         </section>
 
         <section id="gamescreen">
@@ -20,7 +23,7 @@
                     <span>X-Player Score:</span>
                     <span class="playerscore" id="player1score">0</span>
                 </div>
-                <div class="playerbox"></div>
+                <div class="playerbox" id="narberal"></div>
             </div>
             <div class="board"></div>
             <div class="playerboard" id="player2">
@@ -28,7 +31,7 @@
                     <span>O-Player Score:</span>
                     <span class="playerscore" id="player2score">0</span>
                 </div>
-                <div class="playerbox"></div>
+                <div class="playerbox" id="lupusregina"></div>
             </div>
             <div class="endgamebtns">
                 <div class="reviewleft">
