feat: added character speech

--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@
                     <span>X-Player Score:</span>
                     <span class="playerscore" id="player1score">0</span>
                 </div>
-                <div class="playerbox" id="narberal"></div>
+                <div class="playerbox">
+                    <div id="player1speech"><p></p></div>
+                    <div id="narberal"></div>
+                </div>
             </div>
             <div class="board"></div>
             <div class="playerboard" id="player2">
@@ -31,7 +34,10 @@
                     <span>O-Player Score:</span>
                     <span class="playerscore" id="player2score">0</span>
                 </div>
-                <div class="playerbox" id="lupusregina"></div>
+                <div class="playerbox" >
+                    <div id="player2speech"><p></p></div>
+                    <div id="lupusregina"></div>
+                </div>
             </div>
             <div class="endgamebtns">
                 <div class="reviewleft">
