fix: adjust tile sizes

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <section id="gamescreen">
             <div class="playerboard" id="player1">
                 <div class="scoreboard" >
-                    <span>X-Player Score:</span>
+                    <span class="playername">X-Player Score:</span>
                     <span class="playerscore" id="player1score">0</span>
                 </div>
                 <div class="playerbox">
@@ -31,7 +31,7 @@
             <div class="board"></div>
             <div class="playerboard" id="player2">
                 <div class="scoreboard" >
-                    <span>O-Player Score:</span>
+                    <span class="playername">O-Player Score:</span>
                     <span class="playerscore" id="player2score">0</span>
                 </div>
                 <div class="playerbox" >
